Misc corrections